[project]
name = "martblog"
version = "2.0.0"
description = "A simple blog built with flask and bootstrap"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.16.2",
    "ruff>=0.11.11",
]
